Fixed alignment bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,24 +91,26 @@ nav ul li a {
     width: 500px;
     height: 400px;
     margin: 0 auto;
-    text-align: left;
+    padding: 0;
+    text-align: center;
     line-height: 2.75rem;
     position: relative;
     top: 140px;
+    justify-content: center;
 }
 
 .info {
     font-weight: 100px;
-    font-size: 21px;
+    font-size: 20px;
     letter-spacing: 0.05rem;
 }
 
 .line {
-    position: relative;
+    position: absolute;
     top: 50%;
-    width: 100px;
+    width: 100%;
     margin: 0 auto;
-    border-right: 2px solid rgba(255, 255, 255, 0.75);
+    border-right: 1.3px solid rgba(255, 255, 255, 0.75);
     font-size: 160%;
     text-align: center;
     white-space: nowrap;
@@ -126,9 +128,6 @@ nav ul li a {
     font-family: 'Raleway-Light';
     src: url(../fonts/Raleway-Light.ttf);
     font-style: normal;
-}
-
-@media screen and (max-width: 1920px) {
 }
 
 @keyframes typewriter {
